# Mcpy

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  check_dependencies.py  config.toml  pyproject.toml  requirements.txt  setup.bat  setup.py  setup.sh
.github/workflows/: tests.yml
benchmarks/: __init__.py  benchmark.py
errorlog/: error-1.md
mcpy/: __init__.py  server.py
mcpy/core/: __init__.py  entity_system.pxd  entity_system.pyx  network_core.pxd  network_core.pyx  server_core.pxd  server_core.pyx  world_engine.pxd  world_engine.pyx
mcpy/errorlog/: error-1.md
mcpy/persistence/: __init__.py  database.py  integration.py  models.py  operations.py
tests/: test_entity_system.py  test_persistence.py  test_world_engine.py
