[build-system]
requires = ["setuptools>=61.0", "wheel", "Cython>=3.0.0", "numpy>=1.24.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcpy"
version = "0.1.0"
description = "High-performance Minecraft server engine in Python/Cython"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "MCPy Team"}
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "polars>=0.18.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.5",
    "prometheus-client>=0.16.0",
    "msgpack>=1.0.5",
    "uvloop>=0.17.0; platform_system != 'Windows'",
    "pytest>=7.3.1",
    "pytest-benchmark>=4.0.0",
    "memory_profiler>=0.61.0",
    "py-spy>=0.3.14",
]

[project.optional-dependencies]
dev = [
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
    "ruff>=0.0.270",
]
ai = [
    "torch>=2.0.0",
    "tensorboard>=2.13.0",
]

[tool.setuptools]
packages = ["mcpy"]

[tool.cython-build]
modules = [
    "mcpy.core.server_core",
    "mcpy.core.network_core",
    "mcpy.core.world_engine",
    "mcpy.core.entity_system",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
